[gd_scene load_steps=2 format=2]

[ext_resource path="res://Editor/Docks/RailBuilder/RailBuilder.gd" type="Script" id=1]

[node name="Rail Builder" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentRail" type="HBoxContainer" parent="."]
margin_right = 800.0
margin_bottom = 24.0

[node name="Name" type="LineEdit" parent="CurrentRail"]
margin_right = 673.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Rename" type="Button" parent="CurrentRail"]
margin_left = 677.0
margin_right = 741.0
margin_bottom = 24.0
text = "Rename"

[node name="Delete" type="Button" parent="CurrentRail"]
margin_left = 745.0
margin_right = 800.0
margin_bottom = 24.0
text = "Delete"

[node name="AddRail" type="HBoxContainer" parent="."]
margin_top = 28.0
margin_right = 800.0
margin_bottom = 48.0

[node name="Mode" type="OptionButton" parent="AddRail"]
margin_right = 398.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "After Rail"
items = [ "After Rail", null, false, 0, null, "Parallel To", null, false, 1, null, "Before Rail", null, false, 2, null ]
selected = 0

[node name="ParallelDistance" type="HBoxContainer" parent="AddRail"]
visible = false
margin_left = 342.0
margin_right = 680.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AddRail/ParallelDistance"]
margin_top = 5.0
margin_right = 111.0
margin_bottom = 19.0
text = "Parallel Distance:"

[node name="LineEdit" type="LineEdit" parent="AddRail/ParallelDistance"]
margin_left = 115.0
margin_right = 338.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="AddRail" type="Button" parent="AddRail"]
margin_left = 402.0
margin_right = 800.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "New Rail"

[node name="ManualMoving" type="CheckButton" parent="."]
margin_top = 52.0
margin_right = 800.0
margin_bottom = 92.0
text = "Manual Moving in Editor"

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 96.0
margin_right = 800.0
margin_bottom = 100.0

[node name="RotationHeight" type="GridContainer" parent="."]
margin_top = 104.0
margin_right = 800.0
margin_bottom = 156.0
columns = 4

[node name="LabelStart" type="Label" parent="RotationHeight"]
margin_top = 5.0
margin_right = 90.0
margin_bottom = 19.0
size_flags_horizontal = 9
text = "Start Rotation:"

[node name="StartRotation" type="LineEdit" parent="RotationHeight"]
margin_left = 94.0
margin_right = 401.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="LabelEnd" type="Label" parent="RotationHeight"]
margin_left = 405.0
margin_top = 5.0
margin_right = 489.0
margin_bottom = 19.0
size_flags_horizontal = 9
text = "End Rotation:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndRotation" type="LineEdit" parent="RotationHeight"]
margin_left = 493.0
margin_right = 800.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelStart2" type="Label" parent="RotationHeight"]
margin_top = 33.0
margin_right = 90.0
margin_bottom = 47.0
size_flags_horizontal = 9
text = "Start Height:"

[node name="StartHeight" type="LineEdit" parent="RotationHeight"]
margin_left = 94.0
margin_top = 28.0
margin_right = 401.0
margin_bottom = 52.0
size_flags_horizontal = 3
editable = false

[node name="LabelEnd2" type="Label" parent="RotationHeight"]
margin_left = 405.0
margin_top = 33.0
margin_right = 489.0
margin_bottom = 47.0
size_flags_horizontal = 9
text = "End Height:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndHeight" type="LineEdit" parent="RotationHeight"]
margin_left = 493.0
margin_top = 28.0
margin_right = 800.0
margin_bottom = 52.0
size_flags_horizontal = 3
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="."]
margin_top = 160.0
margin_right = 800.0
margin_bottom = 164.0

[node name="S" type="VBoxContainer" parent="."]
margin_top = 168.0
margin_right = 800.0
margin_bottom = 416.0

[node name="General" type="VBoxContainer" parent="S"]
margin_right = 800.0
margin_bottom = 96.0

[node name="RailType" type="HBoxContainer" parent="S/General"]
margin_right = 800.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="S/General/RailType"]
margin_top = 5.0
margin_right = 93.0
margin_bottom = 19.0
text = "Rail Type Path:"

[node name="LineEdit" type="LineEdit" parent="S/General/RailType"]
margin_left = 97.0
margin_right = 800.0
margin_bottom = 24.0
hint_tooltip = "Example (without '): 'res://Resources/RailTypes/Default.tscn'"
size_flags_horizontal = 3

[node name="OverheadLine" type="CheckButton" parent="S/General"]
margin_top = 28.0
margin_right = 800.0
margin_bottom = 68.0
text = "Overhead Line"

[node name="ParallelRail" type="HBoxContainer" parent="S/General"]
margin_top = 72.0
margin_right = 800.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="S/General/ParallelRail"]
margin_top = 5.0
margin_right = 78.0
margin_bottom = 19.0
text = "Parallel Rail:"

[node name="ParallelRail" type="LineEdit" parent="S/General/ParallelRail"]
margin_left = 82.0
margin_right = 407.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="Label2" type="Label" parent="S/General/ParallelRail"]
margin_left = 411.0
margin_top = 5.0
margin_right = 471.0
margin_bottom = 19.0
text = "Distance:"

[node name="ParallelDistance" type="LineEdit" parent="S/General/ParallelRail"]
margin_left = 475.0
margin_right = 800.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Settings" type="VBoxContainer" parent="S"]
margin_top = 100.0
margin_right = 800.0
margin_bottom = 224.0

[node name="OptionButton" type="OptionButton" parent="S/Settings"]
margin_right = 800.0
margin_bottom = 20.0
text = "Length - Radius"
items = [ "Length - Radius", null, false, 0, null, "Radius - Angle", null, false, 1, null, "Length - Angle", null, false, 2, null ]
selected = 0

[node name="Length" type="HBoxContainer" parent="S/Settings"]
margin_top = 24.0
margin_right = 800.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="S/Settings/Length"]
margin_top = 5.0
margin_right = 47.0
margin_bottom = 19.0
text = "Length:"

[node name="LineEdit" type="LineEdit" parent="S/Settings/Length"]
margin_left = 51.0
margin_right = 800.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "100"

[node name="Radius" type="HBoxContainer" parent="S/Settings"]
margin_top = 52.0
margin_right = 800.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="S/Settings/Radius"]
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
text = "Radius:"

[node name="LineEdit" type="LineEdit" parent="S/Settings/Radius"]
margin_left = 50.0
margin_right = 800.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "0"

[node name="Angle" type="HBoxContainer" parent="S/Settings"]
visible = false
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="S/Settings/Angle"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 19.0
text = "Angle:"

[node name="LineEdit" type="LineEdit" parent="S/Settings/Angle"]
margin_left = 44.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "0"

[node name="Slope" type="VBoxContainer" parent="S/Settings"]
margin_top = 80.0
margin_right = 800.0
margin_bottom = 100.0

[node name="ShowHideSlope" type="Button" parent="S/Settings/Slope"]
margin_left = 358.0
margin_right = 442.0
margin_bottom = 20.0
size_flags_horizontal = 4
text = "Show Slope"

[node name="SlopeGrid" type="GridContainer" parent="S/Settings/Slope"]
visible = false
margin_top = 24.0
margin_right = 800.0
margin_bottom = 76.0
columns = 2

[node name="Label" type="Label" parent="S/Settings/Slope/SlopeGrid"]
margin_top = 5.0
margin_right = 142.0
margin_bottom = 19.0
text = "Start Slope (per 100m)"

[node name="StartSlope" type="SpinBox" parent="S/Settings/Slope/SlopeGrid"]
margin_left = 146.0
margin_right = 800.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -100.0
step = 0.001

[node name="Label2" type="Label" parent="S/Settings/Slope/SlopeGrid"]
margin_top = 33.0
margin_right = 142.0
margin_bottom = 47.0
text = "End Slope (per 100m)"

[node name="EndSlope" type="SpinBox" parent="S/Settings/Slope/SlopeGrid"]
margin_left = 146.0
margin_top = 28.0
margin_right = 800.0
margin_bottom = 52.0
size_flags_horizontal = 3
min_value = -100.0
step = 0.001

[node name="Tendency" type="VBoxContainer" parent="S/Settings"]
margin_top = 104.0
margin_right = 800.0
margin_bottom = 124.0

[node name="ShowHideTendency" type="Button" parent="S/Settings/Tendency"]
margin_left = 345.0
margin_right = 455.0
margin_bottom = 20.0
size_flags_horizontal = 4
text = "Show Tendency"

[node name="S" type="GridContainer" parent="S/Settings/Tendency"]
visible = false
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 76.0
columns = 2

[node name="Label" type="Label" parent="S/Settings/Tendency/S"]
margin_top = 5.0
margin_right = 68.0
margin_bottom = 19.0
text = "Start Tend:"

[node name="StartTend" type="SpinBox" parent="S/Settings/Tendency/S"]
margin_left = 72.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -40.0
max_value = 40.0
step = 0.01

[node name="Label2" type="Label" parent="S/Settings/Tendency/S"]
margin_top = 33.0
margin_right = 68.0
margin_bottom = 47.0
text = "End Tend:"

[node name="EndTend" type="SpinBox" parent="S/Settings/Tendency/S"]
margin_left = 72.0
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0
size_flags_horizontal = 3
min_value = -40.0
max_value = 40.0
step = 0.01

[node name="S2" type="GridContainer" parent="S/Settings/Tendency"]
visible = false
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 76.0
columns = 4

[node name="Label" type="Label" parent="S/Settings/Tendency/S2"]
margin_top = 5.0
margin_right = 111.0
margin_bottom = 19.0
text = "TendPoint1: Pos:"

[node name="Tend1Pos" type="SpinBox" parent="S/Settings/Tendency/S2"]
margin_left = 115.0
margin_right = 550.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1.0
max_value = 1000.0
step = 0.01
value = -1.0

[node name="Label2" type="Label" parent="S/Settings/Tendency/S2"]
margin_left = 554.0
margin_top = 5.0
margin_right = 585.0
margin_bottom = 19.0
text = "Tend"

[node name="Tend1" type="SpinBox" parent="S/Settings/Tendency/S2"]
margin_left = 589.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -40.0
max_value = 40.0
step = 0.01

[node name="Label4" type="Label" parent="S/Settings/Tendency/S2"]
margin_top = 33.0
margin_right = 111.0
margin_bottom = 47.0
text = "Tend Point2: Pos:"

[node name="Tend2Pos" type="SpinBox" parent="S/Settings/Tendency/S2"]
margin_left = 115.0
margin_top = 28.0
margin_right = 550.0
margin_bottom = 52.0
size_flags_horizontal = 3
min_value = -1.0
max_value = 1000.0
step = 0.01
value = -1.0

[node name="Label3" type="Label" parent="S/Settings/Tendency/S2"]
margin_left = 554.0
margin_top = 33.0
margin_right = 585.0
margin_bottom = 47.0
text = "Tend"

[node name="Tend2" type="SpinBox" parent="S/Settings/Tendency/S2"]
margin_left = 589.0
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0
size_flags_horizontal = 3
min_value = -40.0
max_value = 40.0
step = 0.01

[node name="automaticTendency" type="CheckButton" parent="S/Settings/Tendency"]
visible = false
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 64.0
text = "automaticTendency"

[node name="Shift" type="VBoxContainer" parent="S/Settings"]
visible = false
margin_top = 152.0
margin_right = 1024.0
margin_bottom = 246.0

[node name="ShiftRail" type="Label" parent="S/Settings/Shift"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Shift Rail:"
align = 1

[node name="Shift" type="HBoxContainer" parent="S/Settings/Shift"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="S/Settings/Shift/Shift"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 19.0
text = "Shift:"

[node name="LineEdit" type="LineEdit" parent="S/Settings/Shift/Shift"]
margin_left = 36.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "2.25"

[node name="Radius" type="HBoxContainer" parent="S/Settings/Shift"]
margin_top = 46.0
margin_right = 1024.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="S/Settings/Shift/Radius"]
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
text = "Radius:"

[node name="LineEdit" type="LineEdit" parent="S/Settings/Shift/Radius"]
margin_left = 50.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "500"

[node name="ShiftButton" type="Button" parent="S/Settings/Shift"]
margin_left = 492.0
margin_top = 74.0
margin_right = 532.0
margin_bottom = 94.0
size_flags_horizontal = 4
text = "Shift"

[node name="Shift2" type="VBoxContainer" parent="S/Settings"]
visible = false
margin_top = 152.0
margin_right = 1024.0
margin_bottom = 246.0

[node name="ShiftRail" type="Label" parent="S/Settings/Shift2"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Shift Rail:"
align = 1

[node name="Shift" type="HBoxContainer" parent="S/Settings/Shift2"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="S/Settings/Shift2/Shift"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 19.0
text = "Shift:"

[node name="LineEdit" type="LineEdit" parent="S/Settings/Shift2/Shift"]
margin_left = 36.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "2.25"

[node name="LengthForward" type="HBoxContainer" parent="S/Settings/Shift2"]
margin_top = 46.0
margin_right = 1024.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="S/Settings/Shift2/LengthForward"]
margin_top = 5.0
margin_right = 101.0
margin_bottom = 19.0
text = "Length Forward:"

[node name="LineEdit" type="LineEdit" parent="S/Settings/Shift2/LengthForward"]
margin_left = 105.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "500"

[node name="ShiftButton" type="Button" parent="S/Settings/Shift2"]
margin_left = 492.0
margin_top = 74.0
margin_right = 532.0
margin_bottom = 94.0
size_flags_horizontal = 4
text = "Shift"

[node name="Update" type="Button" parent="S"]
margin_left = 371.0
margin_top = 228.0
margin_right = 429.0
margin_bottom = 248.0
size_flags_horizontal = 4
text = "Update"

[connection signal="text_entered" from="CurrentRail/Name" to="." method="_on_RenameLine_text_entered"]
[connection signal="pressed" from="CurrentRail/Rename" to="." method="_on_Rename_pressed"]
[connection signal="pressed" from="CurrentRail/Delete" to="." method="_on_Delete_pressed"]
[connection signal="item_selected" from="AddRail/Mode" to="." method="_on_Mode_item_selected"]
[connection signal="text_entered" from="AddRail/ParallelDistance/LineEdit" to="." method="_on_Update_pressed"]
[connection signal="pressed" from="AddRail/AddRail" to="." method="_on_AddRail_pressed"]
[connection signal="pressed" from="ManualMoving" to="." method="_on_ManualMoving_pressed"]
[connection signal="text_entered" from="S/General/RailType/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="S/General/OverheadLine" to="." method="_on_OverheadLine_pressed"]
[connection signal="text_entered" from="S/General/ParallelRail/ParallelDistance" to="." method="_on_LineEdit_text_entered"]
[connection signal="item_selected" from="S/Settings/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="text_entered" from="S/Settings/Length/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="S/Settings/Radius/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="S/Settings/Angle/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="S/Settings/Slope/ShowHideSlope" to="." method="_on_ShowHideSlope_pressed"]
[connection signal="pressed" from="S/Settings/Tendency/ShowHideTendency" to="." method="_on_ShowHideTendency_pressed"]
[connection signal="pressed" from="S/Settings/Tendency/automaticTendency" to="." method="_on_automaticTendency_pressed"]
[connection signal="text_entered" from="S/Settings/Shift/Shift/LineEdit" to="." method="_on_ShiftButton_pressed"]
[connection signal="text_entered" from="S/Settings/Shift/Radius/LineEdit" to="." method="_on_ShiftButton_pressed"]
[connection signal="pressed" from="S/Settings/Shift/ShiftButton" to="." method="_on_ShiftButton_pressed"]
[connection signal="text_entered" from="S/Settings/Shift2/Shift/LineEdit" to="." method="_on_ShiftButton_pressed"]
[connection signal="text_entered" from="S/Settings/Shift2/LengthForward/LineEdit" to="." method="_on_ShiftButton_pressed"]
[connection signal="pressed" from="S/Settings/Shift2/ShiftButton" to="." method="_on_Shift2Button_pressed"]
[connection signal="pressed" from="S/Update" to="." method="_on_Update_pressed"]
